*******************************************************************************
* RECENT CHANGES
*******************************************************************************

=== 1.2.9 ===
* Fixed missing inline display for Phase Detector plugin.
* Fixed invalid input signal level metering for Flanger plugin series.
* Fixed frequency inspection bug for LeftRight and MidSide versions of
  Parametric Equalizer plugin series.
* Implemented Stereo Split mode for stereo version of all dynamic plugins:
  * Compressor and Multiband Compressor;
  * Dynamics Processor and Multiband Dynamics Processor;
  * Expander and Multiband Expander;
  * Gate and Multiband Gate;
  * GOTT Compressor.
* Added Allpass filter to the Filter plugin series.
* Added Bandpass, Ladder-pass and Ladder-rej filters to Parametric Equalizer
  plugin series.
* Introduced Linear Phase mode for the Crossover plugin series.

=== 1.2.8 ===
* Implemented GOTT (Grand Over-The-Top) Compressor plugin series.
* Implemented Filter plugin series.
* Implemented Flanger plugin series.
* Implemented Multiband Limiter plugin series.
* Implemented high-precision oversampling algorithms for Oscilloscope plugin series.
* Updated default values for file selectors in Impulse Responses and Impulse Reverb
  plugin series.
* Added generation of explicit element definitions for LV2 groups in TTL files as a
  workaround to LV2 problem related to missing predefined port groups' elements.
* Added 'All' channel selector to Sampler and Multisampler plugin series which is now
  the default value for channel selector.
* Added missing audio preview for single-channel Sampler Plugin series.
* Adding missing output balance knobs in Impulse Reverb Mono plugin.
* Fixed improper behaviour of the bypass switch for Multiband Compressor, Expander and
  Dynamics Processor plugin series.
* Fixed bug in the font manager which could yield memory corrption after complete font
  manager cleanup (reproducible when switching visual schemas).