@@ -124,6 +124,12 @@ LSP_PLUGINS_ART_DELAY_TYPE              := plug
 LSP_PLUGINS_ART_DELAY_URL_RO            := https://github.com/lsp-plugins/$(LSP_PLUGINS_ART_DELAY_NAME).git
 LSP_PLUGINS_ART_DELAY_URL_RW            := git@github.com:lsp-plugins/$(LSP_PLUGINS_ART_DELAY_NAME).git
 
+LSP_PLUGINS_BEAT_BREATHER_VERSION       := 1.0.0
+LSP_PLUGINS_BEAT_BREATHER_NAME          := lsp-plugins-beat-breather
+LSP_PLUGINS_BEAT_BREATHER_TYPE          := plug
+LSP_PLUGINS_BEAT_BREATHER_URL_RO        := https://github.com/lsp-plugins/$(LSP_PLUGINS_BEAT_BREATHER_NAME).git
+LSP_PLUGINS_BEAT_BREATHER_URL_RW        := git@github.com:lsp-plugins/$(LSP_PLUGINS_BEAT_BREATHER_NAME).git
+
 LSP_PLUGINS_COMP_DELAY_VERSION          := 1.0.15
 LSP_PLUGINS_COMP_DELAY_NAME             := lsp-plugins-comp-delay
 LSP_PLUGINS_COMP_DELAY_TYPE             := plug
